# RedmineDashboard

./: .gitignore  README.md  components.d.ts  package-lock.json  package.json  prettier.config.mjs  tailwind.config.js  tsconfig.json  vite.config.ts
.agent/workflows/: release-documentation.md
.github/workflows/: release.yml
UI_template/overview_dashboard/: code.html
UI_template/project_issues_list/: code.html
UI_template/redmine_homepage/: code.html
UI_template/redmine_login/: code.html
UI_template/time_entry_form/: code.html
UI_template/time_import_tool/: code.html
scripts/: build-test.ts  bump-version.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/redmine/: issues.rs  mod.rs  projects.rs  time_entries.rs  users.rs
src-tauri/src/commands/: auth.rs
src-tauri/src/commands/dashboard/: mod.rs
src-tauri/src/models/: mod.rs  redmine.rs  user.rs
src-tauri/src/utils/: encryption.rs
src/assets/styles/: main.css  select.scss
src/components/: SideMenu.vue
src/components/dashboard/: 參與中專案.vue  待處理議題.vue  本周每日各專案堆疊圖.vue  本週累計工時.vue  每日各專案耗用時數.vue  每日各專案議題議題耗用時數.vue  活動清單.vue  議題活動清單.vue  議題狀態.vue  逾期任務.vue
src/components/form/: Chart.vue
src/components/workTime/: ModelDelete.vue  ModelUpdate.vue  工時填寫.vue  近期工時紀錄.vue
src/composables/: useChart.ts  useWindowInfo.ts
src/composables/app/: useAppClose.ts  useAppUpdate.ts
src/layouts/: blank.vue  dashboard.vue  default.vue  defaultOld.vue  login.vue
src/pages/: Dashboard.vue  Login.vue  ProjectIssues.vue  QuickTime.vue  Setting.vue  WorkTime.vue  WorkTimeImport.vue
src/router/: index.ts
src/stores/: popup.ts  redmine.ts  user.ts
src/types/: ApiInteraction.ts  Chart.ts  Redmine.ts  UserData.ts
src/utils/: api.ts  crosFetch.ts  formatProjectName.ts
src/utils/redmine/: createTimeEntry.ts  deleteTimeEntry.ts  getActivities.ts  getAllActiveProjects.ts  getIssue.ts  getIssues.ts  getMyActiveProjects.ts  getProjects.ts  getTimeEntries.ts  getTimeEntryActivities.ts  getUsersCurrent.ts  updateTimeEntry.ts
