[package]
name = "my-tauri-redmine"
version = "0.4.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# 請參考 https://doc.rust-lang.org/cargo/reference/manifest.html 查看更多定義

[lib]
# `_lib` 後綴看似多餘，但為了確保函式庫名稱唯一且不與執行檔名稱衝突是必須的。
# 這似乎只在 Windows 上會有問題，詳見 https://github.com/rust-lang/cargo/issues/8519
name = "my_tauri_redmine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"                           # 用於開啟外部連結或檔案的 Tauri 插件
serde = { version = "1", features = ["derive"] }    # 用於資料序列化與反序列化
serde_json = "1"                                    # 用於 JSON 處理

tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-single-instance = "2.3.7"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
